--- a/package.json
+++ b/package.json
@@ -18,7 +18,10 @@
   },
   "homepage": "https://github.com/AfterShip/challenge#readme",
   "dependencies": {
+    "cheerio": "^0.22.0",
+    "express": "^4.14.0",
     "mongoose": "^4.6.1",
-    "nodemon": "^1.10.2"
+    "nodemon": "^1.10.2",
+    "request": "^2.75.0"
   }
 }
