--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "cheerio": "^0.22.0",
     "express": "^4.14.0",
+    "fivebeans": "^1.5.0",
     "mongoose": "^4.6.1",
     "nodemon": "^1.10.2",
     "request": "^2.75.0"
