--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "fivebeans": "^1.5.0",
     "mongoose": "^4.6.1",
     "nodemon": "^1.10.2",
-    "request": "^2.75.0"
+    "request": "^2.75.0",
+    "request-promise": "^4.1.1"
   }
 }
