--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "server/app.js",
   "scripts": {
     "start": "nodemon server/app.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "lint": "eslint --ext .jsx,.js ."
   },
   "repository": {
     "type": "git",
@@ -18,6 +19,7 @@
   },
   "homepage": "https://github.com/AfterShip/challenge#readme",
   "dependencies": {
+    "bluebird": "^3.4.6",
     "cheerio": "^0.22.0",
     "co": "^4.6.0",
     "express": "^4.14.0",
@@ -26,5 +28,8 @@
     "nodemon": "^1.10.2",
     "request": "^2.75.0",
     "request-promise": "^4.1.1"
+  },
+  "devDependencies": {
+    "eslint-config-aftership": "^3.1.4"
   }
 }
