--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "challenge",
   "version": "1.0.0",
   "description": "deleted",
-  "main": "server/app.js",
+  "main": "src/producer.js",
   "scripts": {
-    "start": "nodemon server/app.js",
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "src/producer.js",
+    "test": "mocha src/test.js",
     "lint": "eslint --ext .jsx,.js ."
   },
   "repository": {
@@ -20,10 +20,12 @@
   "homepage": "https://github.com/AfterShip/challenge#readme",
   "dependencies": {
     "bluebird": "^3.4.6",
+    "chai": "^3.5.0",
     "cheerio": "^0.22.0",
     "co": "^4.6.0",
     "express": "^4.14.0",
     "fivebeans": "^1.5.0",
+    "mocha": "^3.1.0",
     "mongoose": "^4.6.1",
     "nodemon": "^1.10.2",
     "request": "^2.75.0",
